# showstock

./: .coveragerc  .dockerignore  .env.example  README.md  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup_dev.sh
.github/workflows/: deploy-docs.yml  docs.yml  lint.yml  test.yml
.openhands/microagents/: project.md  repo.md  testing.md
docker/: Dockerfile  Dockerfile.docs  Dockerfile.tests  compose.yaml  init-test-db.sh
docs/: api.md  app_config_usage.md  database.md  development.md  index.md
docs/codex/: app_config_usage.md  database.md
migrations/: env.py
migrations/versions/: e06e8b695a7b_add_brand_and_feed_models.py
showstock/: api.py  auth.py  config.py  db.py  main.py  models.py  utils.py
showstock/models/: __init__.py  feed.py  user.py
showstock/routers/: auth.py
showstock/schemas/: auth.py
tests/: conftest.py  test_api.py  test_auth.py  test_config.py  test_db.py  test_main.py  test_models.py  test_utils.py
tests/utils/: auth.py
web/: main.py
web/templates/: index.html
