[project]
name = "showstock"
version = "0.1.0"
description = "Web backend for managing livestock nutrition plans"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn>=0.21.1",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.5",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "alembic>=1.10.0",
    "asyncpg>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.3.0",
    "httpx>=0.24.0",
    "pre-commit>=3.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "--cov=showstock --cov-report=term --cov-report=xml:coverage.xml" 